# tfm-iot-botnet-detection

./: .gitignore  README.md  pyproject.toml
configs/: nbaiot_autoencoder_global_stage_2.yaml  nbaiot_autoencoder_global_stage_3.yaml  nbaiot_autoencoder_per_device_stage_2.yaml  nbaiot_lof_per_device_stage_1.yaml
data/metadata/n_baiot/: data_summary.csv  device_info.csv  features.csv  file_catalog.csv
docs/: repository_documentation.md
notebooks/01_datasets_analysis/: EDA_N_BaIoT.ipynb
notebooks/02_models_experimentation/: anomaly_th_study.ipynb  autoencoder_global_opt_study.ipynb  autoencoder_per_device_opt_study.ipynb
notebooks/03_results_analysis/: AE_global_results_analysis.ipynb  AE_per_device_results_analysis.ipynb  LOF_results_analysis.ipynb  comparative_analysis.ipynb
outputs/runs/nbaiot_autoencoder_global_stage_1/: config.yaml  global_summary.json
outputs/runs/nbaiot_autoencoder_global_stage_2/: history.csv  model_config.json  optuna_trials.csv  summary.json  train_reconstruction_errors.parquet  val_reconstruction_errors.parquet
outputs/runs/nbaiot_autoencoder_global_stage_3/: global_summary.json
outputs/runs/nbaiot_autoencoder_per_device_stage_1/: config.yaml  global_summary.json
outputs/runs/nbaiot_autoencoder_per_device_stage_2/: global_summary.json
outputs/runs/nbaiot_autoencoder_per_device_stage_3/: config.yaml  global_summary.json
outputs/runs/nbaiot_lof_per_device_stage_1/: config.yaml  (+1 more)
scripts/: prepare_n_baiot_data.py  run_nbaiot_autoencoder_global.py  run_nbaiot_autoencoder_per_device.py  run_nbaiot_lof_per_device.py
(+425 files in other folders)
