[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iotbotnet"
version = "0.1.0"
description = "IoT botnet attack detection using anomaly detection techniques"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "optuna>=3.6",
    "PyYAML>=6.0",
    "tensorflow>=2.18",
]
[project.optional-dependencies]
notebooks = [
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]